--- a/style.css
+++ b/style.css
@@ -1,6 +1,126 @@
+body {
+  font-family: "Roboto Mono", monospace;
+}
 .box-1 {
   position: relative;
 }
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 p {
   position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  font-weight: bold;
+  font-size: 48px;
+  letter-spacing: 3px;
+}
+.box-1 p:hover {
+  opacity: 1;
+}
+.container {
+  display: grid;
+  grid-template-areas:
+    "woman woman tower"
+    "woman woman solitude"
+    "young-girl childrens childrens"
+    "young-girl childrens childrens"
+    "exploring exploring exploring"
+    "happiness happiness desert"
+    "humanity kindness hungry";
+  gap: 20px;
+}
+@media (max-width: 800px) {
+  p {
+    font-size: 24px;
+  }
+  .container {
+    display: grid;
+    grid-template-areas:
+      "woman "
+      "tower"
+      "solitude"
+      "young-girl"
+      "childrens"
+      "exploring"
+      "happiness "
+      "desert"
+      "humanity "
+      "kindness "
+      "hungry";
+    gap: 20px;
+  }
+}
+#woman {
+  grid-area: woman;
+}
+#tower {
+  grid-area: tower;
+}
+#solitue {
+  grid-area: solitude;
+}
+#young-girl {
+  grid-area: young-girl;
+}
+#childrens {
+  grid-area: childrens;
+}
+#exploring {
+  grid-area: exploring;
+}
+#happiness {
+  grid-area: happiness;
+}
+#desert {
+  grid-area: desert;
+}
+#humanity {
+  grid-area: humanity;
+}
+#kindness {
+  grid-area: kindness;
+}
+#beach {
+  grid-area: hungry;
+}
+.overlay {
+  color: white;
+}
+.box {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 400px;
+}
+h1 {
+  font-weight: 900;
+  font-size: 24px;
+}
+li img {
+  width: 30px;
+  height: 30px;
+}
+ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 400px;
+  text-transform: capitalize;
+}
+.mainbox {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
